[package]
name = "libraw"
version = "1.0.0"
authors = ["harana <info@harana.com>"]
description = "Rust wrapper for libraw"
homepage = "https://github.com/harana-oss/libraw-rs"
repository = "https://github.com/harana-oss/libraw-rs"
license = "MIT"
readme = "README.md"
keywords = ["libraw", "raw", "camera", "image"]

[dependencies]
libc = "0.2"
libraw-sys = { git = "http://github.com/harana-oss/libraw-sys" }
